overlord: common: fix style on small screen
The navbar will become two lines on small screen. Decrease the size of
navbar-header to avoid it.

BUG=none
TEST=manually test on small screen device

Reviewed-on: https://chromium-review.googlesource.com/289370
Commit-Queue: Wei-Ning Huang <wnhuang@chromium.org>
Tested-by: Wei-Ning Huang <wnhuang@chromium.org>

--- a/go/src/overlord/app/common/css/common.css
+++ b/go/src/overlord/app/common/css/common.css
@@ -2,7 +2,7 @@
   float: left;
   padding: 15px;
   text-align: center;
-  width: calc(100% - 121px);
+  width: calc(100% - 130px);
 }
 
 .navbar-brand {
